# remote-desktop-rdp

./: Cargo.toml
.github/workflows/: release.yml
cl_tasks/: self-update.md  tailscale-screen-share.md
feature/: self-update.md  tailscale-screen-share.md
src/: app.rs  cloudflared.rs  error.rs  main.rs  process.rs  tailscale.rs  tunnel.rs  updater.rs
src/capture/: capturer.rs  encoder.rs  mod.rs
src/config/: mod.rs  profile.rs
src/input_handler/: handler.rs  mod.rs  translate.rs
src/network/: client.rs  mod.rs  server.rs
src/protocol/: codec.rs  compress.rs  mod.rs
src/rdp/: connection.rs  input.rs  mod.rs  session.rs
src/ui/: host.rs  login.rs  mod.rs  mode_select.rs  setup.rs  tailscale_setup.rs  theme.rs  update.rs  viewer.rs
